<resources>
    <string name="app_name">MyCalculator</string>
    <string name="heading">CALCULATOR</string>

    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_10">0</string>
    <string name="btn_11">C</string>
    <string name="btn_12">x</string>
    <string name="btn_13">-</string>
    <string name="btn_14">+</string>
    <string name="btn_15">/</string>
    <string name="btn_16">=</string>
    <string name="inputTxt">Enter Value</string>


</resources>